# mailing_service

./: pyproject.toml  readme.md
config/: settings.py  urls.py
mailing_service/: forms.py  models.py  urls.py  views.py
mailing_service/management/commands/: send_mailings.py
mailing_service/migrations/: 0001_initial.py  0002_mailing_user_mailingrecipient_user.py  0003_alter_mailing_options.py
mailing_service/templates/mailing_service/: confirm_email.html  home.html  mailing_attempt_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html  register.html  registration_complete.html  statistics.html
mailing_service/templates/registration/: login.html
